fix spacing issues between headings

--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ h1 {
     font-size: 48px;
     color: #2e7ad3;
     text-align: center;
+    margin: 45px 0px;
 }
 
 h2 {
     font-size: 32px;
     color: #104c98;
+    margin: 0px;
+    margin: 0px 0px 15px;
 }
 
 .blog-post {
